--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "nativewebtutorial",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx ts-node main.ts"
   },
   "author": "",
   "license": "ISC",
